--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -26,4 +26,17 @@ body {
 	max-width: 1000px;
 	background-color: white;
 	}
-
+h1, h2 {
+	color: #1E1E1E;
+	font-style: normal;
+	font-weight: 400;
+}
+h1 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-bottom: 20px;
+	padding-top: 20px;
+	font-size: 2.5em;
+	text-align: center;
+	text-transform: uppercase;
+}
