--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -40,3 +40,11 @@ h1 {
 	text-align: center;
 	text-transform: uppercase;
 }
+h2 {
+	margin-top: 0.5em;
+	font-size: 2.25em;
+}
+main, aside {
+	margin-left: 4%;
+	margin-right: 4%;
+}
