changed background color and some other things related to links in #navlinks and created #navlinks a
added two background color as some old browser does not understand rgba value,changed color to white and added padding to every link to give appropiate spacing and list-style-type to none to remove bullets.

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -86,7 +86,24 @@ a:focus {
 }
 
 #navlinks {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	text-align: center;
+	list-style-type: none;
+		background-color:#000000;
+	background-color: rgba(0,0,0,0.65);
 }
+#navlinks a {
+	display: block;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	color: white;
+	font-weight: 400;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
 
 
 
