--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -91,9 +91,13 @@ a:focus {
 	width: 100%;
 	text-align: center;
 	list-style-type: none;
-		background-color:#000000;
+	background-color: #000000;
 	background-color: rgba(0,0,0,0.65);
+	position: absolute;
 }
+#navlinks.displayed {
+}
+
 #navlinks a {
 	display: block;
 	padding-top: 10px;
