appling media query to sight.html
this media query will change apperance of page based on size of screen.noteably change is of navigation menu.

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -194,3 +194,29 @@ footer {
     font-size: 0.8em;
     text-align: center;
 }
+
+@media (min-width: 700px){
+#menulink {
+	display: none;
+}
+#navlinks {
+	max-width: 1000px;
+	position: static;
+	background-color: transparent;
+}
+#navlinks.collapsed {
+	opacity: 1;
+}
+#navlinks a {
+	width: 20%;
+	margin-bottom: 20px;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	float: left;
+	color: #1E1E1E;
+}
+
+
+
+
+}
