adjusted the first paragraph
adjusted the first paragraph made it absolute with respect to block and specified its postion but as we were changing size of page absolute right of page is changing so to take care of that made another selector #hero and it become the block made its position relative so that as size of page changes still paragraph is aliged at certain distance from the that fixed end of golden_gate image.

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -215,6 +215,22 @@ footer {
 	float: left;
 	color: #1E1E1E;
 }
+#hero p {
+	width: 36%;
+	padding-top: 20px;
+	padding-left: 25px;
+	padding-right: 25px;
+	position: absolute;
+	top: 92px;
+	color: white;
+	right: 33px;
+	border: 5px solid rgba(255,255,255,1.00);
+}
+#hero {
+	position: relative;
+}
+
+
 
 
 
