did same thing to alcatraz pic
flaoted alcatraz image to left using same technique as before.

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -264,5 +264,11 @@ footer {
 	margin-right: 0px;
 	margin-left: 10px;
 }
+.floatleft {
+	float: left;
+	margin-left: 0px;
+	margin-right: 10px;
+}
+
 
 }
